<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16px"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/airport_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/airport_label"
        app:layout_constraintBottom_toTopOf="@id/airport_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Spinner
        android:id="@+id/airport_spinner"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16px"
        app:layout_constraintBottom_toTopOf="@+id/switch_dep_arr"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/airport_label" />

    <TextView
        android:id="@+id/departure_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/departure_label"
        app:layout_constraintBottom_toBottomOf="@id/switch_dep_arr"
        app:layout_constraintRight_toLeftOf="@id/switch_dep_arr"
        app:layout_constraintTop_toTopOf="@id/switch_dep_arr" />

    <Switch
        android:id="@+id/switch_dep_arr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/guideline1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/arrival_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arrival_label"
        app:layout_constraintBottom_toBottomOf="@id/switch_dep_arr"
        app:layout_constraintLeft_toRightOf="@id/switch_dep_arr"
        app:layout_constraintTop_toTopOf="@id/switch_dep_arr" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />


</androidx.constraintlayout.widget.ConstraintLayout>